--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 
-<head th:fragment="common_header(scripts,styles,links)">
+<head th:with="ruchesjs='/js/ruches-33/'" 
+	th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
 <meta charset="UTF-8" />
 <link rel="manifest" th:href="@{/js/manifest.webmanifest}" />
@@ -20,45 +21,23 @@
 	th:href="@{/js/bootstrap-5.3.2/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.13.8/datatables.min.js}"></script>
 <script th:inline="javascript">
-		function updateTheme() {
-			document.querySelector('html').setAttribute('data-bs-theme',
-				window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light')
-		}
-		window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
-		updateTheme();
-		const urlValMessFr = /*[[@{/js/jquery.validate-1.20.0-messages_fr.min.js}]]*/null;
-		const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]]*/null;
-		const datatPageLength = /*[[${@environment.getProperty('datatables.pageLength')}]]*/null;
-		const tout = /*[[#{Tout}]]*/null;
-		if ((window.navigator.language.indexOf('fr') !== -1)) {
-			const script = document.createElement('script');
-			script.src = urlValMessFr;
-			script.async = true;
-			document.head.appendChild(script);
-			$.extend(true, $.fn.dataTable.defaults, {
-				language: {
-					url: urlDatatMessFr
-				},
-			});
-		}
-		$.extend(true, $.fn.dataTable.defaults, {
-			stateSave: true,
-			// Attention au formattage, respecter l'espace entre les crochets pour qu'ils ne soient pas
-			//  traités par Thymeleaf
-			lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, tout] ],
-			pageLength: parseInt(datatPageLength),
-		});
+	/* exported urlValMessFr, urlDatatMessFr, datatPageLength, tout */
+	const urlValMessFr = /*[[@{/js/jquery.validate-1.20.0-messages_fr.min.js}]]*/null;
+	const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]]*/null;
+	const datatPageLength = /*[[${@environment.getProperty('datatables.pageLength')}]]*/null;
+	const tout = /*[[#{Tout}]]*/null;
 	</script>
+<script th:src="@{${ruchesjs} + 'include.js'}"></script>	
 <th:block th:replace="${scripts} ?: ~{}" />
 <th:block th:replace="${styles} ?: ~{}" />
 <th:block th:replace="${links} ?: ~{}" />
 </head>
 
 <script th:fragment="jsruches"
-	th:src="@{'/js/ruches-33/' + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
+	th:src="@{${ruchesjs} + ${#strings.substringAfter(#execInfo.processedTemplateName,'/')} + '.js'}">
 	</script>
 <script th:fragment="jsruchesnom(nom)"
-	th:src="@{'/js/ruches-33/' + ${nom} + '.js'}"></script>
+	th:src="@{${ruchesjs} + ${nom} + '.js'}"></script>
 
 <script th:fragment="d3" th:src="@{/js/d3.min-7.8.4.js}"></script>
 <script th:fragment="d3-color" th:src="@{/js/d3-color.min-3.1.0.js}"></script>
