--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -51,11 +51,9 @@
 		<form action="#" th:action="@{/essaim/statistiques}" method="get"
 			id="rucherForm">
 			<div class="mb-1 row">
-				<label for="rucherId" th:text="#{rucher}"
-					class="col-sm-1 col-form-label"></label>
-				<div class="col-sm-2">
+				<div class="col-sm-3">
 					<select class="form-control" id="rucherId" name="rucherId">
-						<option th:text="#{tous}" value="0"
+						<option th:text="#{TousRuchers}" value="0"
 							th:selected="0 == (${rucherId}==null?'0':${rucherId})">
 						</option>
 						<option th:each="rucheropt : ${rucherIdNom}"
