RecolteController.statistiquesEssaim projection essaims et récoltes

--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -13,7 +13,7 @@
 	const essaimnoms = /*[[${essaimnoms}]]*/null;
 	const ruchesvidesnoms = /*[[${ruchesvidesnoms}]]*/null;
 	const recolteHausses = /*[[${recolteHausses}]]*/null;
-	const rucheEssaim = /*[[${rucheEssaim}]]*/null;
+	const rucheEssaim = /*[[${rucheEssaim}==null]]*/null;
 	const pasderuchetxt = /*[[#{essaimPasRuche}]]*/null;
 	const essaimsupprecolttxt = /*[[#{essaimsupprimerecolte}]]*/null;
 	const suppessaimevetxt = /*[[#{supprimeressaimevenements}]]*/null;
