--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -4,8 +4,8 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported Essaims, buttontextprint, buttontextcol, urlTraitLot, urlSucreLot,
-	urlCommLot, urlCadreLot, selectEssTrt */
+	/* exported Essaims,buttontextprint,buttontextcol,urlTraitLot,urlSucreLot,urlCommLot,
+	urlCadreLot,selectEssTrt */
 	const Essaims = /*[[#{Essaims}]]*/null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
