--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.3.2/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.13.8/datatables.min.js}"></script>
-<script th:inline="javascript">	/*[- exported urlValMessFr, urlDatatMessFr, datatPageLength, tout -]*/
+<script th:inline="javascript">	/* exported urlValMessFr,urlDatatMessFr,datatPageLength,tout */
 	const urlValMessFr = /*[[@{/js/jquery.validate-1.20.0-messages_fr.min.js}]]*/null;
 	const urlDatatMessFr = /*[[@{/js/datatables_fr.json}]]*/null;
 	const datatPageLength = /*[[${@environment.getProperty('datatables.pageLength')}]]*/null;
