--- a/src/main/resources/templates/rucher/rucherAjout.html
+++ b/src/main/resources/templates/rucher/rucherAjout.html
@@ -15,7 +15,7 @@
 			});
 			new DataTable('#retraitRuches', {});
 			const actionAjoutRuches = document.getElementById('actionAjoutRuches');
-			function updateLinkAjout(e, dt, type) {
+			function updateLinkAjout(_e, _dt, type) {
 				if (type === 'row') {
 					let rucheIds = '';
 					tableajout.rows({
