--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -82,7 +82,7 @@
 					class="bi-calendar-check" th:title="#{histoRucheRucher}"
 					aria-hidden="true"></a> &nbsp; <a
 					th:href="@{'/essaim/grapheeveesssaim/'+${essaim.id}}" class="bi-graph-up"
-					th:title="#{evenements}" aria-hidden="true"></a> &nbsp; <a
+					th:title="#{GrapheEve}" aria-hidden="true"></a> &nbsp; <a
 					th:href="@{'/essaim/statistiques/'+${essaim.id}}" class="bi-table"
 					th:title="#{statistiquesproduction}" aria-hidden="true"></a>
 			</div>
