graphe eve essaim ajout "vide" pour eslint

--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -12,7 +12,7 @@
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
-	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre
+	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, vide
 	 */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
