essaim graphe événements ajout checkbox afficher les échelles

--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -41,6 +41,8 @@
 				</h1>
 			</div>
 			<div class="col">
+				<label th:text="#{AfficherEchelle}" for="scales"></label> <input
+					type="checkbox" id="scales" checked /> &nbsp;
 				<button id="zoomini" type="button" class="btn btn-primary btn-sm"
 					th:text="#{ZoomIni}"></button>
 			</div>
