--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -12,7 +12,8 @@
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
-	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, vide
+	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses, nbHausses, 
+	vide
 	 */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
@@ -26,6 +27,8 @@
 	const nomsRucher = /*[[${nomsRucher}]]*/null;
 	const datesCadre = /*[[${datesCadre}]]*/null;
 	const nbsCadre = /*[[${nbsCadre}]]*/null;
+	const datesHausses = /*[[${datesHausses}]]*/null;
+	const nbHausses = /*[[${nbHausses}]]*/null;
 	const vide = /*[[${vide}]]*/null;
 </script>
 </head>
