essaimGrapheEve hausses ajout nom de la ruche et type ajout/retrait

--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -13,7 +13,7 @@
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
 	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses, nbHausses, 
-	vide
+	ajoutHausses, nomRucheHausses, vide
 	 */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
@@ -29,6 +29,8 @@
 	const nbsCadre = /*[[${nbsCadre}]]*/null;
 	const datesHausses = /*[[${datesHausses}]]*/null;
 	const nbHausses = /*[[${nbHausses}]]*/null;
+	const ajoutHausses = /*[[${ajoutHausses}]]*/null;
+	const nomRucheHausses = /*[[${nomRucheHausses}]]*/null;
 	const vide = /*[[${vide}]]*/null;
 </script>
 </head>
