--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -13,7 +13,7 @@
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
 	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses, nbHausses, 
-	ajoutHausses, nomRucheHausses, vide
+	ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait
 	 */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
@@ -31,6 +31,9 @@
 	const nbHausses = /*[[${nbHausses}]]*/null;
 	const ajoutHausses = /*[[${ajoutHausses}]]*/null;
 	const nomRucheHausses = /*[[${nomRucheHausses}]]*/null;
+	const ruchetxt = /*[[#{ruche}]]*/null;
+	const ajout = /*[[#{Ajout}]]*/null;
+	const retrait = /*[[#{Retrait}]]*/null;
 	const vide = /*[[${vide}]]*/null;
 </script>
 </head>
