--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -12,8 +12,8 @@
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
-	datesTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses, nbHausses, 
-	ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait
+	datesTrait, datesFinTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses,
+	nbHausses, ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait
 	 */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
@@ -23,6 +23,7 @@
 	const datesRec = /*[[${datesRec}]]*/null;
 	const ruchersRec = /*[[${ruchersRec}]]*/null;
 	const datesTrait = /*[[${datesTrait}]]*/null;
+	const datesFinTrait = /*[[${datesFinTrait}]]*/null;
 	const datesRucher = /*[[${datesRucher}]]*/null;
 	const nomsRucher = /*[[${nomsRucher}]]*/null;
 	const datesCadre = /*[[${datesCadre}]]*/null;
