--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -3,6 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsChart}"></script>
+<script th:replace="~{include :: jsChartZoomHammer}"></script>
 <script th:replace="~{include :: jsChartZoom}"></script>
 <script th:replace="~{include :: luxon}"></script>
 <script th:replace="~{include :: chartjs-adapter}"></script>
