--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 
-<head th:with="ruchesjs='/js/ruches-35/'"
+<head th:with="ruchesjs='/js/ruches-36/'"
 	th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
 <meta charset="UTF-8" />
@@ -70,6 +70,7 @@
 <script th:fragment="jsChart" th:src="@{/js/chart.umd.min-4.4.1.js}"></script>
 
 <script th:fragment="jsChartZoom" th:src="@{/js/chartjs-plugin-zoom.min-2.0.1.js}"></script>
+<script th:fragment="jsChartZoomHammer" th:src="@{/js/hammer.min-2.0.8.js}"></script>
 
 <script th:fragment="luxon" th:src="@{/js/luxon.min-3.4.4.js}"></script>
 <script th:fragment="chartjs-adapter"
