hausseGraphePose affiche le nombre de hausses posées dans le temps

--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -69,7 +69,9 @@
 				<a id="cree" th:href="@{/hausse/cree}" class="bi-plus-lg"
 					th:title="#{ajouterHausse}" aria-hidden="true"></a> &nbsp; <a
 					id="commentaire" href="#" class="bi-chat-text"
-					th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
+					th:title="#{evenementsCommentaire}" aria-hidden="true"></a>&nbsp; <a
+					th:href="@{'/hausse/graphehaussepose'}" class="bi-graph-up"
+					th:title="#{GrapheHaussePose}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
