--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -12,9 +12,12 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported dates, nbPosees */
+	/* exported dates, nbPosees, datesTotal, nbTotal */
 	const dates = /*[[${dates}]]*/null;
 	const nbPosees = /*[[${nbPosees}]]*/null;
+	const datesTotal = /*[[${datesTotal}]]*/null;
+	const nbTotal = /*[[${nbTotal}]]*/null;
+</script>
 </script>
 </head>
 <body>
