--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -12,12 +12,13 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported dates, nbPosees, datesTotal, nbTotal */
+	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, poidsRec */
 	const dates = /*[[${dates}]]*/null;
 	const nbPosees = /*[[${nbPosees}]]*/null;
 	const datesTotal = /*[[${datesTotal}]]*/null;
 	const nbTotal = /*[[${nbTotal}]]*/null;
-</script>
+	const datesRec = /*[[${datesRec}]]*/null;
+	const poidsRec = /*[[${poidsRec}]]*/null;
 </script>
 </head>
 <body>
@@ -26,8 +27,7 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:href="@{'/hausse/liste'}"
-						th:text="#{hausse}"></a>
+					<a th:href="@{'/hausse/liste'}" th:text="#{hausse}"></a>
 					<th:block th:text="#{sep}+#{evenements}"></th:block>
 				</h1>
 			</div>
