création de la liste des événements Pose/Retrait hausse

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -55,12 +55,14 @@
 								th:href="@{/evenement/ruche/listePoidsRuche}"></a></li>
 							<li><a class="dropdown-item" th:text="#{cadreruche}"
 								th:href="@{/evenement/ruche/listeCadreRuche}"></a></li>
-							<li><a class="dropdown-item" th:text="#{HAUSSEREMPLISSAGE}"
-								th:href="@{/evenement/hausse/listeRemplissageHausse}"></a></li>
 							<li><a class="dropdown-item" th:text="#{rucherucher}"
 								th:href="@{/evenement/rucher/listeRucheAjout}"></a></li>
 							<li><a class="dropdown-item" th:text="#{Notifications}"
 								th:href="@{/evenement/listeNotif/false}"></a></li>
+							<li><a class="dropdown-item" th:text="#{HAUSSEREMPLISSAGE}"
+								th:href="@{/evenement/hausse/listeRemplissageHausse}"></a></li>
+							<li><a class="dropdown-item" th:text="#{PoseRetraitHausse}"
+								th:href="@{/evenement/hausse/poseRetraitHausse}"></a></li>
 						</ul></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown3"
