hausseGraphePose récoltes nombre de hausses au lieu du poids de miel

--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -12,13 +12,13 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, poidsRec */
+	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, nbHaussesRec */
 	const dates = /*[[${dates}]]*/null;
 	const nbPosees = /*[[${nbPosees}]]*/null;
 	const datesTotal = /*[[${datesTotal}]]*/null;
 	const nbTotal = /*[[${nbTotal}]]*/null;
 	const datesRec = /*[[${datesRec}]]*/null;
-	const poidsRec = /*[[${poidsRec}]]*/null;
+	const nbHaussesRec = /*[[${nbHaussesRec}]]*/null;
 </script>
 </head>
 <body>
