--- a/src/main/resources/templates/hausse/hausseGraphePose.html
+++ b/src/main/resources/templates/hausse/hausseGraphePose.html
@@ -12,13 +12,17 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, nbHaussesRec */
+	/* exported dates, nbPosees, datesTotal, nbTotal, datesRec, nbHaussesRec 
+	nbHaussesP, nbHaussesT, recNbHausses */
 	const dates = /*[[${dates}]]*/null;
 	const nbPosees = /*[[${nbPosees}]]*/null;
 	const datesTotal = /*[[${datesTotal}]]*/null;
 	const nbTotal = /*[[${nbTotal}]]*/null;
 	const datesRec = /*[[${datesRec}]]*/null;
 	const nbHaussesRec = /*[[${nbHaussesRec}]]*/null;
+	const nbHaussesP = /*[[#{nbHaussesP}]]*/null;
+	const nbHaussesT = /*[[#{nbHaussesT}]]*/null;
+	const recNbHausses = /*[[#{recNbHausses}]]*/null;
 </script>
 </head>
 <body>
