--- a/src/main/resources/templates/essaim/essaimGrapheEve.html
+++ b/src/main/resources/templates/essaim/essaimGrapheEve.html
@@ -7,15 +7,11 @@
 <script th:replace="~{include :: jsChartZoom}"></script>
 <script th:replace="~{include :: luxon}"></script>
 <script th:replace="~{include :: chartjs-adapter}"></script>
-<script th:replace="~{include :: d3-color}"></script>
-<script th:replace="~{include :: d3-interpolate}"></script>
-<script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported poids, dates, poidsSucre, datesSucre, poidsRec, datesRec, ruchersRec, 
 	datesTrait, datesFinTrait, datesRucher, nomsRucher, datesCadre, nbsCadre, datesHausses,
-	nbHausses, ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait
-	 */
+	nbHausses, ajoutHausses, nomRucheHausses, vide, ruchetxt, ajout, retrait */
 	const poids = /*[[${poids}]]*/null;
 	const dates = /*[[${dates}]]*/null;
 	const poidsSucre = /*[[${poidsSucre}]]*/null;
