ruchesGraphe.js ajout zoom et pan. Suppression d3 color quand inutile

--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -5,8 +5,7 @@
 <script th:replace="~{include :: d3}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported
-	data, essaimnom, essaimtxt,	ruchetxt, ruchertxt,
+	/* exported	data, essaimnom, essaimtxt,	ruchetxt, ruchertxt,
 	MielKgtxt, MielDescKgtxt, Actif, Inactif, urlessaim	*/
 	const data = /*[(${essaimTree})]*/null;
 	const essaimnom = /*[[${essaim.nom}]]*/null;
