--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -4,13 +4,9 @@
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
 <script th:replace="~{include :: jsChart}"></script>
-<script th:replace="~{include :: d3-color}"></script>
-<script th:replace="~{include :: d3-interpolate}"></script>
-<script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:inline="javascript">
 	/* exported Chart, Hausses, Pots, HaussesEssaim,
-		poidsMielHausses, poidsMielPots, debutAnnee, nbIEssaims
-	 */
+		poidsMielHausses, poidsMielPots, debutAnnee, nbIEssaims */
 	const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
 	const poidsMielPots = /*[[${poidsMielPots}]]*/null;
 	const debutAnnee = /*[[${debutAnnee}]]*/null;
