--- a/src/main/resources/templates/rucher/rucherPoids.html
+++ b/src/main/resources/templates/rucher/rucherPoids.html
@@ -3,6 +3,8 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsChart}"></script>
+<script th:replace="~{include :: jsChartZoomHammer}"></script>
+<script th:replace="~{include :: jsChartZoom}"></script>
 <script th:replace="~{include :: luxon}"></script>
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
@@ -19,7 +21,7 @@
 	<nav th:replace="~{navbar::navbar}"></nav>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col text-center">
+			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/'+${rucher.id}}"
 						th:text="#{rucher}+' '+${rucher.nom}"></a>
@@ -28,6 +30,12 @@
 					<th:block th:if="${#arrays.isEmpty(essaims)}"
 						th:text="#{sep}+#{aucunePesee}"></th:block>
 				</h1>
+			</div>
+			<div class="col" th:unless="${#arrays.isEmpty(essaims)}">
+				<label th:text="#{AfficherEchelle}" for="scales"></label> <input
+					type="checkbox" id="scales" checked /> &nbsp;
+				<button id="zoomini" type="button" class="btn btn-primary btn-sm"
+					th:text="#{ZoomIni}"></button>
 			</div>
 		</div>
 	</div>
