essaim graphe descendance : zoom et pan (d3)

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -44,6 +44,8 @@
 	th:src="@{/js/d3-interpolate.min-3.0.1.js}"></script>
 <script th:fragment="d3-scale-chromatic"
 	th:src="@{/js/d3-scale-chromatic.min-3.0.1.js}"></script>
+<script th:fragment="d3-zoom" th:src="@{/js/d3-zoom.min-3.0.0.js}"></script>
+	
 
 <script th:fragment="jsol" th:src="@{/js/ol-6.15.1/ol.js}"></script>
 <link th:fragment="cssol" rel="stylesheet" type="text/css" media="all"
