--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -3,6 +3,9 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: d3}"></script>
+
+<script th:replace="~{include :: d3-zoom}"></script>
+
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
 	/* exported	data, essaimnom, essaimtxt,	ruchetxt, ruchertxt,
